--- a/intro.html
+++ b/intro.html
@@ -3,12 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <title>創作者自我介紹</title>
+  <style>
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+    }
+    h1 {
+      color: #4a90e2;
+    }
+    .button-group {
+      margin-top: 30px;
+    }
+    .button-group a {
+      display: inline-block;
+      margin: 10px 10px 0 0;
+      padding: 10px 16px;
+      background-color: #4a90e2;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+    .button-group a:hover {
+      background-color: #357ac8;
+    }
+  </style>
 </head>
 <body>
   <h1>創作者自我介紹</h1>
   <p>大家好！我是張同學，目前就讀高中二年級，對資訊科技與AI應用非常有興趣。</p>
-  <p>這次參加 AI創網實戰營，學會了使用ChatGPT協助編寫HTML網頁，也了解了GitHub與Render的實際部署流程。</p>
+  <p>這次參加 AI創網實戰營，學會了使用 ChatGPT 協助編寫 HTML 網頁，也了解了 GitHub 與 Render 的實際部署流程。</p>
   <p>我的第一個網站是個人簡介頁面，希望未來能持續學習更多前端技術，做出更完整的作品！</p>
-  <p><a href="index.html">← 回主頁</a></p>
+
+  <div class="button-group">
+    <a href="index.html">回主頁</a>
+    <a href="interest.html">我的興趣</a>
+    <a href="reflection.html">體驗營心得</a>
+  </div>
 </body>
 </html>
