Update and rename game.html to interest.html

--- a/interest.html
+++ b/interest.html
@@ -92,6 +92,6 @@
         </tr>
     </table>
 
-    <a href="index.html" class="back">返回首頁</a>
+    <a href="intro.html" class="back">← 回自我介紹</a>
 </body>
 </html>
