--- a/interest.html
+++ b/interest.html
@@ -1,97 +1,108 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <title>荒野亂鬥介紹與角色排名</title>
-    <style>
-        body {
-            font-family: "微軟正黑體", sans-serif;
-            background-color: #fdfdfd;
-            padding: 40px;
-            text-align: center;
-        }
-        h1 {
-            color: #e67e22;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.8;
-            margin: 30px auto;
-            max-width: 800px;
-            color: #333;
-        }
-        table {
-            margin: 30px auto;
-            border-collapse: collapse;
-            width: 80%;
-        }
-        th, td {
-            border: 1px solid #ccc;
-            padding: 12px;
-        }
-        th {
-            background-color: #f39c12;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-        a.back {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-        }
-        a.back:hover {
-            background-color: #2980b9;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>荒野亂鬥介紹與角色排名</title>
+  <style>
+    body {
+      font-family: "微軟正黑體", sans-serif;
+      background-color: #fdfdfd;
+      padding: 40px;
+      color: #333;
+      text-align: center;
+    }
+    h1 {
+      color: #e67e22;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 18px;
+      max-width: 800px;
+      margin: 0 auto 30px auto;
+      line-height: 1.8;
+    }
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+    .card {
+      background-color: #fff8f0;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      width: 260px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.08);
+      transition: transform 0.2s ease;
+    }
+    .card:hover {
+      transform: translateY(-6px);
+    }
+    .rank {
+      font-size: 22px;
+      font-weight: bold;
+      color: #f39c12;
+      margin-bottom: 10px;
+    }
+    .name {
+      font-size: 20px;
+      color: #333;
+      margin-bottom: 12px;
+    }
+    .desc {
+      font-size: 16px;
+      color: #666;
+    }
+    a.back {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 10px 20px;
+      background-color: #3498db;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+    a.back:hover {
+      background-color: #2980b9;
+    }
+  </style>
 </head>
 <body>
-    <h1>荒野亂鬥介紹與角色排名</h1>
-    <p>
-        《荒野亂鬥》（Brawl Stars）是一款由 Supercell 開發的多人對戰行動遊戲，玩家可選擇各種獨特角色進行對戰。遊戲結合了即時戰略、射擊與團隊合作元素，是我最喜歡的遊戲之一。
-    </p>
-    <p>
-        下表是我依照角色強度與實用性所整理的個人排名（2025年版）：
-    </p>
+  <h1>荒野亂鬥介紹與角色排名</h1>
+  <p>
+    《荒野亂鬥》（Brawl Stars）是一款由 Supercell 開發的多人對戰行動遊戲，結合即時戰略、射擊與團隊合作元素，是我最喜歡的遊戲之一。
+  </p>
+  <p>以下是我心目中 2025 年最強角色 Top 5！</p>
 
-    <table>
-        <tr>
-            <th>排名</th>
-            <th>角色名稱</th>
-            <th>特色簡介</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Spike</td>
-            <td>遠程攻擊，控制範圍強，有強大終極技能</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Stu</td>
-            <td>機動性極高，技能冷卻快，可快速穿梭戰場</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Byron</td>
-            <td>支援與傷害兼具，可持續回血與壓制敵人</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Surge</td>
-            <td>升級後火力與範圍大增，具有強力壓制力</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>Leon</td>
-            <td>隱身偷襲型，適合收割殘血敵人</td>
-        </tr>
-    </table>
+  <div class="card-container">
+    <div class="card">
+      <div class="rank">第 1 名</div>
+      <div class="name">Spike</div>
+      <div class="desc">遠程攻擊，控制範圍強，有強大終極技能。</div>
+    </div>
+    <div class="card">
+      <div class="rank">第 2 名</div>
+      <div class="name">Stu</div>
+      <div class="desc">機動性極高，技能冷卻快，可快速穿梭戰場。</div>
+    </div>
+    <div class="card">
+      <div class="rank">第 3 名</div>
+      <div class="name">Byron</div>
+      <div class="desc">支援與傷害兼具，可持續回血與壓制敵人。</div>
+    </div>
+    <div class="card">
+      <div class="rank">第 4 名</div>
+      <div class="name">Surge</div>
+      <div class="desc">升級後火力與範圍大增，具有強力壓制力。</div>
+    </div>
+    <div class="card">
+      <div class="rank">第 5 名</div>
+      <div class="name">Leon</div>
+      <div class="desc">隱身偷襲型，適合收割殘血敵人。</div>
+    </div>
+  </div>
 
-    <a href="intro.html" class="back">← 回自我介紹</a>
+  <a href="intro.html" class="back">← 回自我介紹</a>
 </body>
 </html>
