--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
     </table>
 
     <div class="button-group">
-      <a href="github.html">GitHub 操作說明</a>
-      <a href="render.html">Render 操作說明</a>
-      <a href="intro.html">創作者自我介紹</a>
+      <a href="chatgpt.html" class="button">ChatGPT 操作說明</a>
+      <a href="github.html" class="button">GitHub 操作說明</a>
+      <a href="render.html" class="button">Render 操作說明</a>
+      <a href="intro.html" class="button">創作者自我介紹</a>
     </div>
 
   </section>
