--- a/github.html
+++ b/github.html
@@ -3,17 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <title>GitHub 操作說明</title>
+  <style>
+    body {
+      font-family: "微軟正黑體", sans-serif;
+      background-color: #ffffff;
+      padding: 40px;
+      max-width: 800px;
+      margin: auto;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #24292e;
+    }
+    h2 {
+      color: #0366d6;
+      margin-top: 30px;
+    }
+    p {
+      line-height: 1.8;
+    }
+    ol {
+      padding-left: 20px;
+      line-height: 1.8;
+    }
+    a.back {
+      display: block;
+      margin-top: 40px;
+      text-align: center;
+      padding: 10px 20px;
+      background-color: #3498db;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      width: 200px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    a.back:hover {
+      background-color: #2980b9;
+    }
+  </style>
 </head>
 <body>
+
   <h1>GitHub 操作說明</h1>
+
+  <h2>一、建立 GitHub 帳號</h2>
   <ol>
-    <li>註冊 GitHub 帳號：前往 https://github.com 註冊一個帳號。</li>
-    <li>建立新倉庫（Repository）：點選右上角 ➕ → New repository。</li>
-    <li>命名倉庫並選擇 Public。</li>
-    <li>上傳你的 `index.html`（或整個網站資料夾）。</li>
-    <li>進入「Settings」→「Pages」，選擇 `main` branch / root → 點選 Save。</li>
-    <li>完成後，你會得到一個公開網址，例如 `https://你的帳號.github.io/你的倉庫名/`。</li>
+    <li>前往 <a href="https://github.com" target="_blank">https://github.com</a></li>
+    <li>點選右上角「Sign up」，依指示註冊帳號</li>
+    <li>驗證電子信箱後即可開始使用</li>
   </ol>
-  <p><a href="index.html">← 回主頁</a></p>
+
+  <h2>二、建立新儲存庫（Repository）</h2>
+  <ol>
+    <li>登入後點右上角「+」 → 「New repository」</li>
+    <li>輸入儲存庫名稱（例如：ai-camp-site）</li>
+    <li>選擇「Public」，勾選「Add a README file」</li>
+    <li>點擊「Create repository」</li>
+  </ol>
+
+  <h2>三、上傳網頁檔案</h2>
+  <ol>
+    <li>點進儲存庫頁面 → 點選「Add file」 → 「Upload files」</li>
+    <li>選擇 `index.html`、`intro.html` 等檔案上傳</li>
+    <li>下方輸入簡單說明，例如 "上傳首頁" → 點擊「Commit changes」</li>
+  </ol>
+
+  <h2>四、啟用 GitHub Pages</h2>
+  <ol>
+    <li>在儲存庫頁面 → 點選上方「Settings」</li>
+    <li>左邊選單點「Pages」</li>
+    <li>在「Branch」選擇 main，資料夾選「/ (root)」</li>
+    <li>按下「Save」，幾秒後會產生一個網址</li>
+    <li>你的網站就會在這個網址上線！</li>
+  </ol>
+
+  <h2>範例網址</h2>
+  <p>
+    https://你的帳號.github.io/你的儲存庫名稱/  
+    <br>（例如：https://aicamp123.github.io/ai-camp-site/）
+  </p>
+
+  <a href="index.html" class="back">← 回首頁</a>
+
 </body>
 </html>
