--- a/render.html
+++ b/render.html
@@ -3,18 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <title>Render 操作說明</title>
+  <style>
+    body {
+      font-family: "微軟正黑體", sans-serif;
+      background-color: #ffffff;
+      padding: 40px;
+      max-width: 800px;
+      margin: auto;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #16a085;
+    }
+    h2 {
+      color: #138d75;
+      margin-top: 30px;
+    }
+    p, ol {
+      line-height: 1.8;
+    }
+    ol {
+      padding-left: 20px;
+    }
+    code {
+      background-color: #f2f2f2;
+      padding: 2px 4px;
+      border-radius: 4px;
+      font-family: "Courier New", monospace;
+    }
+    .example {
+      background-color: #f9f9f9;
+      border-left: 4px solid #aaa;
+      padding: 10px 15px;
+      margin: 10px 0;
+    }
+    a.back {
+      display: block;
+      margin-top: 40px;
+      text-align: center;
+      padding: 10px 20px;
+      background-color: #3498db;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      width: 200px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    a.back:hover {
+      background-color: #2980b9;
+    }
+  </style>
 </head>
 <body>
+
   <h1>Render 操作說明</h1>
+
+  <h2>什麼是 Render？</h2>
+  <p>
+    Render 是一個可以免費部署靜態網站的雲端平台。我們可以把放在 GitHub 上的網頁檔案，透過 Render 自動變成一個對外公開的網站！
+  </p>
+
+  <h2>操作步驟（靜態網站）</h2>
   <ol>
-    <li>前往 https://render.com 並註冊帳號（可用 GitHub 登入）。</li>
-    <li>點選「New」→「Static Site」。</li>
-    <li>選擇你的 GitHub 倉庫。</li>
-    <li>輸入網站名稱與網址（例如 ai-web-camp）。</li>
-    <li>Build Command 留空，Publish Directory 填 `.`</li>
-    <li>點選「Create Static Site」開始部署。</li>
-    <li>完成後 Render 會給你一個公開網址。</li>
+    <li>前往 <a href="https://render.com" target="_blank">https://render.com</a>，註冊帳號（可以使用 GitHub 登入）</li>
+    <li>登入後點選「New → Static Site」</li>
+    <li>選擇要部署的 GitHub Repository（建議事先設為 public）</li>
+    <li>填寫資料：
+      <ul>
+        <li><strong>Name：</strong> 你的網站名稱</li>
+        <li><strong>Branch：</strong> main 或 master</li>
+        <li><strong>Build Command：</strong>（空白即可）</li>
+        <li><strong>Publish Directory：</strong> 輸入 <code>./</code></li>
+      </ul>
+    </li>
+    <li>點擊「Create Static Site」開始部署</li>
+    <li>完成後會得到一個網址，例如：<code>https://你的網站名稱.onrender.com</code></li>
   </ol>
-  <p><a href="index.html">← 回主頁</a></p>
+
+  <h2>常見錯誤排除</h2>
+  <ul>
+    <li>Render 無法找到檔案？請確認你的 GitHub repo 裡有 <code>index.html</code> 並放在最外層</li>
+    <li>網址打開是空白？請檢查 HTML 是否有語法錯誤，或重新部署一次</li>
+  </ul>
+
+  <h2>成果範例</h2>
+  <div class="example">
+    https://ai-camp-demo.onrender.com  
+    （點進去就可以看到自己寫的網頁被公開展示囉！）
+  </div>
+
+  <a href="index.html" class="back">← 回首頁</a>
+
 </body>
 </html>
