--- a/index.html
+++ b/index.html
@@ -59,6 +59,38 @@
       text-align: center;
       color: #777;
     }
+    .top-bar {
+      background-color: #2c3e50;
+      color: white;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    .top-bar a {
+      color: white;
+      text-decoration: none;
+      margin-right: 15px;
+      font-weight: bold;
+    }
+    .button-area {
+      text-align: center;
+      margin-top: 100px;
+    }
+    .button-area a {
+      display: inline-block;
+      margin: 20px;
+      padding: 15px 30px;
+      font-size: 18px;
+      background-color: #3498db;
+      color: white;
+      text-decoration: none;
+      border-radius: 10px;
+    }
+    .button-area a:hover {
+      background-color: #2980b9;
+    }
   </style>
 </head>
 <body>
