--- a/index.html
+++ b/index.html
@@ -154,6 +154,19 @@
       </tbody>
     </table>
 
+    <!-- 🔗 頁首連結與按鈕 -->
+    <div class="top-bar">
+      <div>
+        <a href="https://mis.pccu.edu.tw/" target="_blank">文化資管系</a>
+      </div>
+      <div>
+        <a href="github.html">GitHub 操作說明</a>
+        <a href="render.html">Render 操作說明</a>
+        <a href="intro.html">創作者自我介紹</a>
+        <a href="chatgpt.html">ChatGPT 操作說明</a>
+      </div>
+    </div>
+    
     <div class="button-group">
       <a href="chatgpt.html" class="button">ChatGPT 操作說明</a>
       <a href="github.html" class="button">GitHub 操作說明</a>
