--- a/intro.html
+++ b/intro.html
@@ -32,9 +32,17 @@
 </head>
 <body>
   <h1>創作者自我介紹</h1>
-  <p>大家好！我是張同學，目前就讀高中二年級，對資訊科技與AI應用非常有興趣。</p>
-  <p>這次參加 AI創網實戰營，學會了使用 ChatGPT 協助編寫 HTML 網頁，也了解了 GitHub 與 Render 的實際部署流程。</p>
-  <p>我的第一個網站是個人簡介頁面，希望未來能持續學習更多前端技術，做出更完整的作品！</p>
+  <p>大家好！我是中國文化大學資訊管理學系王福星教授兼系主任暨所長 。</p>
+  <p>文化資管系設有AI組(A班)和BI組(B班)，115學年度將再增加資安組。</p>
+  <p>文化資管系幫助您習得最夯的資訊專長、商管專長。</p>
+  <p>本系同學可選擇在校本部(陽明山)，或在建國校區(大安森林公園旁)、延平校區(西門町旁)上課。</p>
+  <p>我們很重視學生的健全品格，並安排豐富的課外活動，如系學會、社團、跨領域(如韓文、金融、傳播、運動…)</p>
+  <p>文化資管113學年獲勞動部補助兩個就業學程:1.人工智慧實務學程 2. 資安威脅趨勢、防護與實務操作人才培育實務學程。</p>
+  <p>就業學程協助學生到資訊公司實習、順利就業。</p>
+  <p>文化資管的合作公司有凌羣電腦、國泰世華、長榮航空、國眾電腦、行動貝果、安碁電腦 (Acer 的資安公司)</p>
+  <p>聯寶電腦 (Lenovo 的子公司)、雄獅科技、騰雲科技…上市公司。</p>
+  <p>為了方便同學實習，西門町旁設有本校的內江宿舍，大四同學可以1天在建國校區上課，4天在公司實習。</p>
+  <p>有任何未來就讀的想法都可以跟我討論，我的LINE ID:0988014077。</p>
 
   <div class="button-group">
     <a href="index.html">回主頁</a>
