--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
       </tbody>
     </table>
     
+    <!-- 加在 body 的結尾，主按鈕區域之後 -->
+    <div style="text-align: center; margin-top: 60px;">
+      <h2>加入營隊 LINE 聯絡群</h2>
+      <p>掃描下方 QR Code 加入我們的 LINE 聯絡群組：</p>
+      <img src="line_qr.png" alt="LINE QR Code" width="200" style="border: 2px solid #ccc; border-radius: 8px;">
+    </div>
+    
     <div class="button-group">
       <a href="chatgpt.html" class="button">ChatGPT 操作說明</a>
       <a href="github.html" class="button">GitHub 操作說明</a>
