--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div style="text-align: center; margin-top: 60px;">
       <h2>加入營隊 LINE 聯絡群</h2>
       <p>掃描下方 QR Code 加入我們的 LINE 聯絡群組：</p>
-      <img src="line_qr.png" alt="LINE QR Code" width="200" style="border: 2px solid #ccc; border-radius: 8px;">
+      <img src="line_qr.jpg" alt="LINE QR Code" width="200" style="border: 2px solid #ccc; border-radius: 8px;">
     </div>
     
     <div class="button-group">
