--- a/intro.html
+++ b/intro.html
@@ -32,6 +32,12 @@
 </head>
 <body>
   <h1>創作者自我介紹</h1>
+
+  <div style="text-align: center; margin-top: 30px;">
+    <img src="my_photo.jpg" alt="作者照片" width="200" style="border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    <p style="margin-top: 10px;">作者照片</p>
+  </div>
+  
   <p>大家好！我是中國文化大學資訊管理學系王福星教授兼系主任暨所長 。</p>
   <p>文化資管系設有AI組(A班)和BI組(B班)，115學年度將再增加資安組。</p>
   <p>文化資管系幫助您習得最夯的資訊專長、商管專長。</p>
