--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     <!-- 加在 body 的結尾，主按鈕區域之後 -->
     <div style="text-align: center; margin-top: 60px;">
       <h2>加入營隊 LINE 聯絡群</h2>
+      <p>授課教師：王福星 教授｜助教：王仁為 同學(升大二)</p>      
       <p>掃描下方 QR Code 加入我們的 LINE 聯絡群組：</p>
       <img src="line_qr.jpg" alt="LINE QR Code" width="200" style="border: 2px solid #ccc; border-radius: 8px;">
     </div>
