--- a/intro.html
+++ b/intro.html
@@ -9,9 +9,16 @@
       background-color: #f9f9f9;
       color: #333;
       padding: 20px;
+      text-align: center; /* ✅ 置中所有文字與區塊 */
     }
     h1 {
       color: #4a90e2;
+    }
+    p {
+      max-width: 800px;
+      margin: 10px auto;
+      line-height: 1.8;
+      text-align: left; /* ✅ 保持段落文字易讀性 */
     }
     .button-group {
       margin-top: 30px;
@@ -33,7 +40,7 @@
 <body>
   <h1>創作者自我介紹</h1>
 
-  <div style="text-align: center; margin-top: 30px;">
+  <div style="margin-top: 30px;">
     <img src="my_photo.jpg" alt="作者照片" width="200" style="border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
     <p style="margin-top: 10px;">作者照片</p>
   </div>
@@ -48,7 +55,7 @@
   <p>文化資管的合作公司有凌羣電腦、國泰世華、長榮航空、國眾電腦、行動貝果、安碁電腦 (Acer 的資安公司)</p>
   <p>聯寶電腦 (Lenovo 的子公司)、雄獅科技、騰雲科技…上市公司。</p>
   <p>為了方便同學實習，西門町旁設有本校的內江宿舍，大四同學可以1天在建國校區上課，4天在公司實習。</p>
-  <p>有任何未來就讀的想法都可以跟我討論，我的LINE ID:0988014077。</p>
+  <p>有任何未來就讀的想法都可以跟我討論，我的 LINE ID: 0988014077。</p>
 
   <div class="button-group">
     <a href="index.html">回主頁</a>
