--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI創網實戰營｜課程大綱</title>
+  <title>AI創網實戰營｜課程大綱 (7/11)</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
