--- a/intro.html
+++ b/intro.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>創作者自我介紹</title>
   <style>
     body {
@@ -9,7 +10,7 @@
       background-color: #f9f9f9;
       color: #333;
       padding: 20px;
-      text-align: center; /* ✅ 置中所有文字與區塊 */
+      text-align: center;
     }
     h1 {
       color: #4a90e2;
@@ -18,7 +19,7 @@
       max-width: 800px;
       margin: 10px auto;
       line-height: 1.8;
-      text-align: left; /* ✅ 保持段落文字易讀性 */
+      text-align: left;
     }
     .button-group {
       margin-top: 30px;
@@ -41,20 +42,12 @@
   <h1>創作者自我介紹</h1>
 
   <div style="margin-top: 30px;">
-    <img src="my_photo.jpg" alt="作者照片" width="200" style="border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    <img src="my_photo.jpg" alt="鍾承佑的照片" width="200" style="border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
   </div>
   
-  <p>大家好！我是中國文化大學資訊管理學系王福星教授兼系主任暨所長 。</p>
-  <p>文化資管系設有AI組(A班)和BI組(B班)，115學年度將再增加資安組。</p>
-  <p>文化資管系幫助您習得最夯的資訊專長、商管專長。</p>
-  <p>本系同學可選擇在校本部(陽明山)，或在建國校區(大安森林公園旁)、延平校區(西門町旁)上課。</p>
-  <p>我們很重視學生的健全品格，並安排豐富的課外活動，如系學會、社團、跨領域(如韓文、金融、傳播、運動…)</p>
-  <p>文化資管113學年獲勞動部補助兩個就業學程:1.人工智慧實務學程 2. 資安威脅趨勢、防護與實務操作人才培育實務學程。</p>
-  <p>就業學程協助學生到資訊公司實習、順利就業。</p>
-  <p>文化資管的合作公司有凌羣電腦、國泰世華、長榮航空、國眾電腦、行動貝果、安碁電腦 (Acer 的資安公司)</p>
-  <p>聯寶電腦 (Lenovo 的子公司)、雄獅科技、騰雲科技…上市公司。</p>
-  <p>為了方便同學實習，西門町旁設有本校的內江宿舍，大四同學可以1天在建國校區上課，4天在公司實習。</p>
-  <p>有任何未來就讀的想法都可以跟我討論，我的 LINE ID: 0988014077。</p>
+  <p>大家好，我是鍾承佑。</p>
+  <p>我平常喜歡玩《英雄聯盟》（LoL）、看 NBA，最喜歡的球隊是金州勇士隊（Golden State Warriors）。</p>
+  <p>我也很喜歡聽音樂，尤其是台灣的樂團「美秀集團」，他們的風格讓我很有共鳴。</p>
 
   <div class="button-group">
     <a href="index.html">回主頁</a>
@@ -63,3 +56,6 @@
   </div>
 </body>
 </html>
+
+
+   
