--- a/interest.html
+++ b/interest.html
@@ -2,7 +2,8 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>荒野亂鬥介紹與角色排名</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>英雄聯盟介紹與角色排名</title>
   <style>
     body {
       font-family: "微軟正黑體", sans-serif;
@@ -12,7 +13,7 @@
       text-align: center;
     }
     h1 {
-      color: #e67e22;
+      color: #2ecc71;
       margin-bottom: 20px;
     }
     p {
@@ -28,8 +29,8 @@
       gap: 20px;
     }
     .card {
-      background-color: #fff8f0;
-      border: 1px solid #ddd;
+      background-color: #f0fff5;
+      border: 1px solid #cce5d4;
       border-radius: 10px;
       width: 260px;
       padding: 20px;
@@ -38,11 +39,12 @@
     }
     .card:hover {
       transform: translateY(-6px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
     }
     .rank {
       font-size: 22px;
       font-weight: bold;
-      color: #f39c12;
+      color: #27ae60;
       margin-bottom: 10px;
     }
     .name {
@@ -69,37 +71,38 @@
   </style>
 </head>
 <body>
-  <h1>荒野亂鬥介紹與角色排名</h1>
+  <h1>英雄聯盟介紹與角色排名</h1>
   <p>
-    《荒野亂鬥》（Brawl Stars）是一款由 Supercell 開發的多人對戰行動遊戲，結合即時戰略、射擊與團隊合作元素，是我最喜歡的遊戲之一。
+    《英雄聯盟》（League of Legends）是一款由 Riot Games 開發的多人線上對戰遊戲。
+    玩家可從超過百位英雄中選擇角色進行 5v5 對戰，結合策略與操作，是全球最受歡迎的電競遊戲之一。
   </p>
-  <p>以下是我心目中 2025 年最強角色 Top 5！</p>
+  <p>以下是我心目中 2025 年最強英雄 Top 5！</p>
 
   <div class="card-container">
     <div class="card">
       <div class="rank">第 1 名</div>
-      <div class="name">Spike</div>
-      <div class="desc">遠程攻擊，控制範圍強，有強大終極技能。</div>
+      <div class="name">安比薩（Ambessa Medarda）</div>
+      <div class="desc">來自皮爾托福的強悍指揮官，未來有望成為強勢戰士英雄。</div>
     </div>
     <div class="card">
       <div class="rank">第 2 名</div>
-      <div class="name">Stu</div>
-      <div class="desc">機動性極高，技能冷卻快，可快速穿梭戰場。</div>
+      <div class="name">關（Kayn）</div>
+      <div class="desc">雙形態打野王者，擁有高機動與爆發力，能自由轉換戰術風格。</div>
     </div>
     <div class="card">
       <div class="rank">第 3 名</div>
-      <div class="name">Byron</div>
-      <div class="desc">支援與傷害兼具，可持續回血與壓制敵人。</div>
+      <div class="name">劫（Zed）</div>
+      <div class="desc">影忍刺客，瞬間爆發高、擅長單殺與切入後排。</div>
     </div>
     <div class="card">
       <div class="rank">第 4 名</div>
-      <div class="name">Surge</div>
-      <div class="desc">升級後火力與範圍大增，具有強力壓制力。</div>
+      <div class="name">拉克絲（Lux）</div>
+      <div class="desc">中遠距離法師，技能組爆發與控場兼備，適合團戰。</div>
     </div>
     <div class="card">
       <div class="rank">第 5 名</div>
-      <div class="name">Leon</div>
-      <div class="desc">隱身偷襲型，適合收割殘血敵人。</div>
+      <div class="name">布里茲（Blitzcrank）</div>
+      <div class="desc">經典輔助英雄，一勾入魂，改變戰局的節奏之神。</div>
     </div>
   </div>
 
